# plugin-architecture-playground

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
include/plugin/: plugin_interface.h
include/text_utils/: text_utils.hpp  text_utils.inl
midi/: CMakeLists.txt
midi/include/midi/: error.hpp  message.hpp  midi.hpp  midi_in.hpp  midiin_attributes.hpp  passkey.hpp
midi/src/: error.cpp  message.cpp  midi_in.cpp  wincommon.h
module_load/: CMakeLists.txt
module_load/include/module_load/: exception.hpp  module.hpp  modulefwd.hpp  traits.hpp  types.hpp  version.hpp
module_load/src/: exception.cpp  module.cpp
plugin/: CMakeLists.txt  plugin_impl.cpp  plugin_impl.hpp  plugin_interface.cpp
src/: PluginArchitectureSample.cpp  blocking_queue.hpp  blocking_queue.inl  misc.cpp  misc.hpp
wrapper/: CMakeLists.txt
wrapper/include/wrap/: action.hpp  action_descriptor.hpp  action_event.hpp  action_executor.hpp  basic_descriptor.hpp  error.hpp  error_descriptor.hpp  nothrow.hpp  passkey.hpp  payload.hpp  plugin.hpp  plugin_attributes.hpp  plugin_configurator.hpp  plugin_descriptor.hpp  plugin_object.hpp  plugin_version.hpp  rcstring.hpp  visibility.hpp  wrap.hpp
wrapper/src/: action.cpp  action_descriptor.cpp  action_executor.cpp  error.cpp  error_descriptor.cpp  payload.cpp  plugin.cpp  plugin_configurator.cpp  plugin_descriptor.cpp  plugin_version.cpp  rcstring.cpp  status_utils.cpp  status_utils.hpp
